# rosenv

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  ci-bst-check.sh  ci-format.py  ci-format.sh  ci-integration-test.py  ci-integration-test.sh  ci-lint.py  ci-lint.sh  ci-typing.py  ci-typing.sh  ci-unit-test.py  ci-unit-test.sh  pkgInfo.py  pyproject.toml  release.sh  sonar-project.properties
.github/actions/dependency-install/: action.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup-system/: action.yml
.github/workflows/: main.yml
.gitlab/issue_templates/: Default.md
assets/: robenv.eps
docker/: Makefile  humble.Dockerfile  iron.Dockerfile  rosenv.Dockerfile
scripts/: update_rosdep_cache_mocks.sh
src/robenv/: __main__.py  cli.py
src/robenv/catkin_profile/: __init__.py  parse.py  profile.py
src/robenv/commands/: add.py  clear_cache.py  info.py  initialize.py  install.py  remove.py  rosdep_add.py  rosdep_generate.py  rosdep_remove.py  rosdep_verify.py  run.py  shell.py  util.py
src/robenv/environment/: __init__.py  distro.py  env.py  initialize.py  locate.py  run_command.py  shell.py
src/robenv/logging/: __init__.py
src/robenv/ros/: __init__.py  ros.py
src/robenv/ros_package/: builder.py  checker.py  package.py  workspace.py
src/robenv/rosdep/: initialize.py  rosdep.py
src/robenv/templates/: __init__.py  activate.template  setup.sh.template
src/robenv/util/: cancelable_executor.py  file_logger.py  paths.py
src/rosenv/: __main__.py  cli.py
src/rosenv/catkin_profile/: __init__.py  parse.py
src/rosenv/commands/: add.py  clear_cache.py  info.py  initialize.py  install.py  remove.py  rosdep_add.py  rosdep_generate.py  rosdep_remove.py  rosdep_verify.py  run.py  shell.py  util.py
src/rosenv/environment/: __init__.py  distro.py  env.py  initialize.py  locate.py  run_command.py  shell.py
src/rosenv/logging/: __init__.py
src/rosenv/ros/: ros.py
src/rosenv/ros_package/: builder.py  checker.py  workspace.py
src/rosenv/rosdep/: __init__.py  initialize.py  rosdep.py
src/rosenv/templates/: __init__.py  activate.template  local_setup.sh.template  setup.sh.template
src/rosenv/util/: cpu_count.py  file_logger.py
tests/: conftest.py  test_distro.py
tests/integration/: conftest.py  test_install_meta.py
tests/integration/commands/: __init__.py  conftest.py  test_add.py  test_clean_cache.py  test_info.py  test_initialize.py  test_remove.py  test_run.py  test_shell.py
tests/integration/commands/install/: conftest.py  test_install.py  test_install_launch_file_detection.py  test_install_meta.py
tests/integration/commands/rosdep/: conftest.py  test_rosdep_add.py  test_rosdep_generate.py  test_rosdep_remove.py  test_rosdep_verify.py
tests/resources/catkin_tools/profiles/alternative/: config.yaml
tests/resources/catkin_tools/profiles/default/: config.yaml
tests/resources/example_project_launch_files/src/launch_fails/: CMakeLists.txt  package.xml
tests/resources/example_project_launch_files/src/launch_fails/launch/: server.launch
tests/resources/example_project_launch_files/src/launch_success/: CMakeLists.txt  package.xml
tests/resources/example_project_ros1/src/adder/: CMakeLists.txt  package.xml
tests/resources/example_project_ros1/src/adder_meta/: CMakeLists.txt  package.xml
tests/resources/example_project_ros1/src/adder_srvs/: CMakeLists.txt  package.xml
tests/resources/example_project_ros1/src/client/: CMakeLists.txt  package.xml
tests/resources/example_project_ros1/src/client/src/: client.cpp
tests/resources/example_project_ros1/src/python_server/: CMakeLists.txt  package.xml  setup.py
tests/resources/example_project_ros1/src/python_server/launch/: python_server.launch
tests/resources/example_project_ros1/src/python_server/src/: python_server.py
tests/resources/example_project_ros1/src/server/: CMakeLists.txt  package.xml
tests/resources/example_project_ros1/src/server/src/: server.cpp
tests/resources/example_project_ros2/src/adder/: CMakeLists.txt  package.xml
tests/resources/example_project_ros2/src/adder/include/adder/: adder.h
tests/resources/example_project_ros2/src/adder/src/: adder.cpp
tests/resources/example_project_ros2/src/adder_srvs/: CMakeLists.txt  package.xml
tests/resources/example_project_ros2/src/client/: CMakeLists.txt  package.xml
tests/resources/example_project_ros2/src/client/src/: client.cpp
tests/resources/example_project_ros2/src/python_server/: package.xml  setup.cfg  setup.py
tests/resources/example_project_ros2/src/python_server/python_server/: python_server.py
tests/resources/example_project_ros2/src/server/: CMakeLists.txt  package.xml
tests/resources/example_project_ros2/src/server/src/: server.cpp
tests/resources/rosdep_mocks/sources.cache/: index
tests/resources/test_debs/: alternativedeps_0.0.0_all.deb  brokenalternativesdeps_0.0.0_all.deb  brokendeps_0.0.0_all.deb  dep-on-nodeps_0.0.0_all.deb  nodeps2_0.0.0_all.deb  ros-noetic-adder_0.0.0-0focal_amd64.deb  unmetversiondep_0.0.0_all.deb
tests/unit/: test_workspace.py
tests/unit/catkin_profile/: test_parse.py  test_profile.py
tests/unit/commands/: test_util.py
tests/unit/environment/: test_distro.py  test_locate.py  test_run_command.py  test_shell.py
tests/unit/rosdep/: test_initialize.py  test_rosdep.py
tests/unit/util/: test_cancelable_executor.py  test_cpu_count.py
