<?xml version="1.0"?>
<package format="2">
    <name>launch_success</name>
    <version>0.0.1</version>
    <description>
        This is a metapackage that tries to distribute launch and succeeds
    </description>
    <maintainer email="hri@todo.todo">hri</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <export>
    </export>
</package>
