<?xml version="1.0"?>
<package format="2">
  <name>python_server</name>
  <version>0.0.0</version>
  <description>The server package</description>

  <maintainer email="hri@todo.todo">hri</maintainer>
  <license>CC-BY-3.0</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <depend>adder</depend>

  <exec_depend>adder_meta</exec_depend>

  <export>
  </export>
</package>
